stylesheets/default.css
nav {
	float: top;
	border: 2px #bbbbbb solid;
	padding: 1%;
	margin: 1%;
	width: 50%;
	left: 23%;
	position: relative;
	background-color: #C8F9FF;
	border-radius: 10px;
}
h1 {
	display: inline;
	margin-right: 1em;
}
main {
	border: 2px #bbbbbb solid;
	padding: 1%;
	margin: 1%;
	height: 50%;
	width: 50%;
	left: 23%;
	position: relative;
	display: inline-block;
	background-color: #C8F9FF;
	border-radius: 10px;
}
main img {
	display: inline;
	margin: 1%;
	border-radius: 4%;
}
article {
	display: inline-block;
	position: relative;
	margin:1%;
	top:0;
	width: 80%;
}
img + article {
	position: absolute;
}
* {
	font-family: helvetica, arial, sans-serif;
	color: #ae4b24;
}
nav a {
	display: inline-block;
	border: 1px solid #bbbbbb;
	text-decoration: none;
	text-align: center;
	position: relative;
	padding: .25em;
	margin: 0;
	width: 6em;	
	font-size: .75em;
}
ul {
	border: 1px	solid #bbbbbb;
	padding-top: .5em;
	padding-bottom: .5em;
	margin: 1em;
}
nav a:hover {
	background-color: #bbbbbb;
}
nav a:active {
	background-color: #bbbbbb;
}
a {
	color: #ae4b24;
}
html {
	background-color: #00c0de;
	background-image: url("../imgs/bg.png");
}
.first {
	border-radius: 5px 0 0 5px;
}
.last {
	border-radius: 0 5px 5px 0;
}

.socialmedia img {
	display: inline-block;
	height: 1.25em;
	margin-left: 13%;
}
.socialmedia {
	padding: 0% 0% 0% 1%;
	margin: 0% 0% 0% 1%;
	height: 5%;
	width: 50%;
	left: 23%;
	position: relative;
}
.socialmedia div {
	width: 49%;
	height: 100%;
	display: inline-block;
	float: left;
}

